# playground

ansible/: README.md  run_ansible.sh  setup_trojan_client.sh  setup_trojan_server.sh
ansible/playbooks/: trojan_client.yml  trojan_server.yml
ansible/playbooks/roles/common/tasks/: main.yml
ansible/playbooks/roles/nginx/tasks/: main.yml
ansible/playbooks/roles/nginx/templates/: default.conf.j2
ansible/playbooks/roles/trojan_client/: main.yml
ansible/playbooks/roles/trojan_client/tasks/: main.yml
ansible/playbooks/roles/trojan_client/templates/: config.json.j2
ansible/playbooks/roles/trojan_server/tasks/: main.yml
ansible/playbooks/roles/trojan_server/templates/: config.json.j2
ansible/playbooks/roles/trojan_server/vars/: main.yaml
cmake_gtest/: CMakeLists.txt  gtest_main.cpp  main.cpp  print_lib.cpp  print_lib.h  print_lib_test.cpp
cmake_gtest/sub_folder/: CMakeLists.txt  calc_test.cpp
configs/: .gitconfig
configs/.ssh/: config  win_config
